# order-of-reason

./: .gitignore  OR_banner.py  README.md  pyproject.toml
brand/logo/: logo.py
code/utilities/: __init__.py  colors.py  intro.py
docs/workflows/: structure.md
scripts/experiments/: color_test.py
scripts/thumbnails/: real_analysis.py
scripts/utilities/: __init__.py  colors.py  intro.py
