[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "manim>=0.19.2",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
